# ffic

./: README.md  ffic.cabal
src/: FFIC.hs
test/: test.hs
