Name:		ffic
Version:	0.0
Synopsis:	test 
Description: 	test 
License:        BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Category:       FFI Tools
Cabal-Version:  >= 1.8
Data-files: 


Source-repository head
  type: git
  location: http://www.github.com/wavewave/ffic

Library
  hs-source-dirs: src
  ghc-options: 	-Wall -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base == 4.* , 
                 mtl>2, 
                 containers, 
                 filepath>1, 
                 directory, 
                 HStringTemplate, 
                 split,
                 process,
                 transformers >= 0.3, 
                 template-haskell,  
                 hashable,
                 unordered-containers,
                 lens > 3,
                 either, 
                 errors,
                 bytestring,
                 pureMD5,  
                 Cabal

  Exposed-Modules: 
                   FFIC
  Other-Modules:
                   Paths_ffic

